css/style.css
* {
	box-sizing: border-box;
}

body {
	font-family: 'Roboto', sans-serif;
	background-image: url(../assets/img/bg_img_2.jpg);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    background-position: center;
    background-color:#474746;
    background-blend-mode: soft-light;

}

/*  ============================= navbar ============================= */

.navbar ul li {
	
	font-size:13px;
	text-transform: uppercase;
	font-weight: 600;
}

#navbar ul li>a {
	transition:all 0.3s ease-in-out;
}

#navbar ul li>a:hover{
	color:#ff6d40;
}


.active {
	color:#ff6d40;
}

.navbar-brand {
	font-weight: 600;
	font-size:25px;

}

.navbar-default .navbar-brand {
	color:#3f3b3b;
}

.navbar-brand span {
	text-transform: lowercase;
	color:#ff6d40;
}

.navbar-default {
	background-color: rgba(255,255,255, 0.9);
	border-top:5px solid #ff6d40;
}


/* ======================== text_box ================================*/

#home {
	text-align: center;
	text-transform: uppercase;
	color:#fff;
	font-size: 40px;
	font-weight: 600;
	display:block;
	/*width:400px;
	height:400px;*/
	/*background-color:red;*/
	margin-top: 200px;
}

h1 {
	font-size:55px;
	text-shadow: 0px 2px 0px rgba(0,0,0, 1);
}

#home h1 span {
	color:#ff6d40;
	text-shadow: 0px 1px 0px rgba(0,0,0, 0.5);
}


.medium_size {
	font-size:45px;
	text-shadow: 0px 2px 0px rgba(0,0,0, 1);
}

.small_size {
	font-size:30px;
	text-shadow: 0px 2px 0px rgba(0,0,0, 1);
}

.h4 {
	font-size:25px;
	text-shadow: 0px 2px 0px rgba(0,0,0, 1);
}

.btn-default {
	border:none;
	/*box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.2);*/
}

#action_btn {
	font-size: 13px;
	font-weight: 600;
	padding:7px 21px;
	color:#fff;
	background-color: #ff6d40;
	border-radius:0;
	box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.2);
	text-shadow: 0 1px 1px rgba(0,0,0,0.2);
	transition: all 0.3s ease-in-out;
}

#action_btn:hover {
	background-color: #3d3d3d;
    color: #fff;
}

#action_btn:active {
	background-color: #3d3d3d;
    color: #fff;
	box-shadow: inset 0 3px 5px rgba(0,0,0,0.125);
}


/* ====================================== about section ============================== */


#about {
	border-top:5px solid #ff6d40;
	background-color:#fff;
	padding:15px 30px 15px 30px;
	margin-top: 150px;
	margin-bottom: 60px;
}

#about h3 {
	font-size: 20px;
	text-transform: uppercase;
	color:#3d3d3d;
	font-weight: 500;
}

#about h3 span {
	text-transform: uppercase;
	color:#ff6d40;
}

 #about p {
 	font-size:14px;
 	color:#3d3d3d;
	font-weight: 400;
 }


/* =================================== speakers sections =============================*/

#speakers {
	background-color: #fff;
	margin-bottom: 40px;
}

#section_head {
	background-color: #ff6d40;
	padding:15px 30px 15px 30px;
}

#speakers h3 {
	font-size: 20px;
	text-transform: uppercase;
	color:#fff;
	font-weight: 600;
}

#speakers p {
	padding:15px 30px 15px 30px;
	font-size:14px;
 	color:#3d3d3d;
	font-weight: 400;
}



/* ====================== speaker images ===================================== */

.thumbnail {
	padding:0px !important;
	border:none;
	border-top:5px solid #ff6d40;
	border-radius:0;
}

.thumbnail img {
	width:100%;
}

.thumbnail h4 {
	font-size:15px;
	text-transform: uppercase;
}

.thumbnail p {
	color:#696866;
}

.col-md-4:first-of-type {
	padding-left:0px !important;
}

.col-md-4:last-of-type {
	padding-right:0px !important;
}

